tests/errors/semantic/blocking/MISSING_TYPE_ANNOTATION.py
# Missing type annotation. Pyccel needs arguments to be annotated with types to know which types are required in the translated code.
# pylint: disable=missing-function-docstring, missing-module-docstring

def f(n):
    pass
